--- a/app/src/main/res/layout/activity_fill_tree_info.xml
+++ b/app/src/main/res/layout/activity_fill_tree_info.xml
@@ -1,18 +1,192 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scrollView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FillTreeInfoActivity">
+    android:paddingLeft="@dimen/main_padding"
+    android:paddingRight="@dimen/main_padding">
 
-    <ImageView
-        android:id="@+id/tree_preview"
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        tools:context=".FillTreeInfoActivity">
+
+        <ImageView
+            android:id="@+id/tree_preview"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:adjustViewBounds="true"
+            android:scaleType="fitXY"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <EditText
+            android:id="@+id/scientific_name"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tree_info_text_height"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/tree_info_scientific_name_label"
+            app:layout_constraintTop_toBottomOf="@+id/tree_preview"
+            tools:layout_editor_absoluteX="85dp" />
+
+        <EditText
+            android:id="@+id/editTextTextPersonName2"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/tree_info_text_height"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            android:ems="10"
+            android:inputType="textPersonName"
+            android:text="@string/tree_info_common_name_label"
+            app:layout_constraintTop_toBottomOf="@+id/scientific_name"
+            tools:layout_editor_absoluteX="50dp" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/tree_info_diameter_label"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <EditText
+            android:id="@+id/editTextNumberDecimal"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:inputType="numberDecimal"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
+            app:layout_constraintStart_toEndOf="@id/textView6"/>
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
+            app:layout_constraintStart_toEndOf="@id/editTextNumberDecimal"
+            android:text="@string/tree_info_height_label" />
+
+        <EditText
+            android:id="@+id/editTextNumberDecimal2"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            app:layout_constraintBaseline_toBaselineOf="@id/textView6"
+            app:layout_constraintStart_toEndOf="@id/textView7"
+            android:inputType="numberDecimal" />
+
+        <TextView
+            android:id="@+id/textView4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            android:text="@string/tree_info_risk_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView6" />
+
+        <RadioGroup
+            android:id="@+id/radioGroup"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView4">
+
+            <RadioButton
+                android:id="@+id/radioButton2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/tree_info_risk_low"
+                tools:layout_editor_absoluteX="225dp"
+                tools:layout_editor_absoluteY="396dp" />
+
+            <RadioButton
+                android:id="@+id/radioButton3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/tree_info_risk_medium"
+                tools:layout_editor_absoluteX="44dp"
+                tools:layout_editor_absoluteY="405dp" />
+
+            <RadioButton
+                android:id="@+id/radioButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/tree_info_risk_high"
+                tools:layout_editor_absoluteX="69dp"
+                tools:layout_editor_absoluteY="348dp" />
+        </RadioGroup>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            android:text="@string/tree_info_stage_title"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+
+        <RadioGroup
+            android:id="@+id/radioGroup3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            tools:layout_editor_absoluteX="114dp">
+
+            <RadioButton
+                android:id="@+id/radioButton4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/tree_info_stage_low" />
+
+            <RadioButton
+                android:id="@+id/radioButton5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/tree_info_stage_medium" />
+
+            <RadioButton
+                android:id="@+id/radioButton6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/tree_info_stage_high" />
+        </RadioGroup>
+
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/fragmentContainerView"
+            android:name="com.three.tree_training_app.TreeMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="120dp"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />
+
+        <Button
+            android:id="@+id/button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/tree_info_margin"
+            android:layout_marginBottom="@dimen/tree_info_margin"
+            android:text="Button"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
+
