--- a/app/src/main/res/layout/activity_fill_tree_info.xml
+++ b/app/src/main/res/layout/activity_fill_tree_info.xml
@@ -31,18 +31,18 @@
             android:layout_marginTop="@dimen/tree_info_margin"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="@string/tree_info_scientific_name_label"
+            android:hint="@string/tree_info_scientific_name_label"
             app:layout_constraintTop_toBottomOf="@+id/tree_preview"
             tools:layout_editor_absoluteX="85dp" />
 
         <EditText
-            android:id="@+id/editTextTextPersonName2"
+            android:id="@+id/common_name"
             android:layout_width="match_parent"
             android:layout_height="@dimen/tree_info_text_height"
             android:layout_marginTop="@dimen/tree_info_margin"
             android:ems="10"
             android:inputType="textPersonName"
-            android:text="@string/tree_info_common_name_label"
+            android:hint="@string/tree_info_common_name_label"
             app:layout_constraintTop_toBottomOf="@+id/scientific_name"
             tools:layout_editor_absoluteX="50dp" />
 
@@ -52,11 +52,11 @@
             android:layout_height="wrap_content"
             android:text="@string/tree_info_diameter_label"
             android:layout_marginTop="@dimen/tree_info_margin"
-            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2"
+            app:layout_constraintTop_toBottomOf="@+id/common_name"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <EditText
-            android:id="@+id/editTextNumberDecimal"
+            android:id="@+id/diameter"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -70,11 +70,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             app:layout_constraintBaseline_toBaselineOf="@id/textView6"
-            app:layout_constraintStart_toEndOf="@id/editTextNumberDecimal"
+            app:layout_constraintStart_toEndOf="@id/diameter"
             android:text="@string/tree_info_height_label" />
 
         <EditText
-            android:id="@+id/editTextNumberDecimal2"
+            android:id="@+id/height"
             android:layout_width="50dp"
             android:layout_height="wrap_content"
             android:ems="10"
@@ -93,7 +93,7 @@
             app:layout_constraintTop_toBottomOf="@id/textView6" />
 
         <RadioGroup
-            android:id="@+id/radioGroup"
+            android:id="@+id/risk"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
@@ -103,70 +103,76 @@
             app:layout_constraintTop_toBottomOf="@+id/textView4">
 
             <RadioButton
-                android:id="@+id/radioButton2"
+                android:id="@+id/risk_low"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/tree_info_risk_low"
                 tools:layout_editor_absoluteX="225dp"
-                tools:layout_editor_absoluteY="396dp" />
+                tools:layout_editor_absoluteY="396dp"
+                android:onClick="onRiskRadioButtonClicked" />
 
             <RadioButton
-                android:id="@+id/radioButton3"
+                android:id="@+id/risk_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/tree_info_risk_medium"
                 tools:layout_editor_absoluteX="44dp"
-                tools:layout_editor_absoluteY="405dp" />
+                tools:layout_editor_absoluteY="405dp"
+                android:onClick="onRiskRadioButtonClicked" />
 
             <RadioButton
-                android:id="@+id/radioButton"
+                android:id="@+id/risk_high"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="@string/tree_info_risk_high"
                 tools:layout_editor_absoluteX="69dp"
-                tools:layout_editor_absoluteY="348dp" />
+                tools:layout_editor_absoluteY="348dp"
+                android:onClick="onRiskRadioButtonClicked" />
         </RadioGroup>
 
         <TextView
-            android:id="@+id/textView5"
+            android:id="@+id/state"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/tree_info_margin"
             android:text="@string/tree_info_stage_title"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+            app:layout_constraintTop_toBottomOf="@+id/risk" />
 
         <RadioGroup
-            android:id="@+id/radioGroup3"
+            android:id="@+id/stateGroup"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@+id/textView5"
+            app:layout_constraintTop_toBottomOf="@+id/state"
             tools:layout_editor_absoluteX="114dp">
 
             <RadioButton
-                android:id="@+id/radioButton4"
+                android:id="@+id/state_low"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/tree_info_stage_low" />
+                android:text="@string/tree_info_stage_low"
+                android:onClick="onStateRadioButtonClicked" />
 
             <RadioButton
-                android:id="@+id/radioButton5"
+                android:id="@+id/state_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/tree_info_stage_medium" />
+                android:text="@string/tree_info_stage_medium"
+                android:onClick="onStateRadioButtonClicked" />
 
             <RadioButton
-                android:id="@+id/radioButton6"
+                android:id="@+id/state_high"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/tree_info_stage_high" />
+                android:text="@string/tree_info_stage_high"
+                android:onClick="onStateRadioButtonClicked" />
         </RadioGroup>
 
         <androidx.fragment.app.FragmentContainerView
@@ -176,7 +182,7 @@
             android:layout_height="120dp"
             android:layout_marginTop="@dimen/tree_info_margin"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radioGroup3" />
+            app:layout_constraintTop_toBottomOf="@+id/stateGroup" />
 
         <Button
             android:id="@+id/button"
@@ -184,9 +190,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/tree_info_margin"
             android:layout_marginBottom="@dimen/tree_info_margin"
-            android:text="Button"
+            android:text="@string/tree_info_button"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/fragmentContainerView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
-
